--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
                     <a class="link" href="">Images</a>
                 </li>
                 <li>
-                    <a class="menu-icon" href=""><i class="fa-solid fa-bars"></i></a>
+                    <div class="circle-shadow">
+                        <a class="menu-icon" href=""><i class="fa-solid fa-bars"></i></a>
+                    </div>
                 </li>
                 <li>
-                    <a href="" class="user-icon"><span>D</span></a>
+                    <div class="circle-shadow">
+                        <a href="" class="user-icon"><span>D</span></a>
+                    </div>
                 </li>
             </ul>
         </nav>
